# cadical

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  NEWS.md  README.md  TODO.md  VERSION  app.hpp  avg.hpp  build_emscripten.sh  build_norm.sh  cadical  cadical.cc  cadical.hpp  clause.hpp  config.hpp.in  configure  configure.sh  configure_emscripten  ema.hpp  exor.cnf  file.cpp  file.hpp  flake.nix  get-git-id.sh  level.hpp  logging.hpp  main.cpp  make-config-header.sh  make-src-release.sh  makefile  makefile.in  mkconfig.sh  options.h  options.hpp  (+7 more)
.github/workflows/: build.yml
cnfs/: .gitignore  add16.cnf  full3.cnf  full4.cnf  prime121.cnf  prime169.cnf  prime25.cnf  prime361.sol  prime529.sol  prime841.sol  sat10.cnf  sat2.sol  unit2.sol  unit3.sol
contrib/: craigtracer.LICENSE.APACHE  craigtracer.LICENSE.MIT  craigtracer.cpp  craigtracer.hpp  craigtracer.md
include/cadical/: arena.hpp  averages.hpp  bins.hpp  block.hpp  build.hpp  cadical.hpp  checker.hpp  clause.hpp  config.hpp  contract.hpp  cover.hpp  decompose.hpp  drattracer.hpp  elim.hpp  ema.hpp  external.hpp  file.hpp  flags.hpp  format.hpp  frattracer.hpp  heap.hpp  idruptracer.hpp  instantiate.hpp  internal.hpp  inttypes.hpp  level.hpp  limit.hpp  logging.hpp  lratbuilder.hpp  lratchecker.hpp  lrattracer.hpp  message.hpp  occs.hpp  options.hpp  parse.hpp  phases.hpp  profile.hpp  proof.hpp  queue.hpp  radix.hpp  (+16 more)
path/to/: Closure.cpp
scripts/: README.md  build-and-test-all-configurations.sh  check-options-occur.sh  colors.sh  extend-solution.sh  generate-cubes.sh  generate-embedded-options-default-list.sh  generate-options-range-list.sh  get-git-id.sh  make-build-header.sh  make-config-header.sh  make-src-release.sh  normalize-white-space.sh  prepare-sc2017-submission.sh  prepare-sc2018-submission.sh  prepare-sc2020-submission.sh  prepare-sc2021-submission.sh  prepare-sr2019-submission.sh  run-cadical-and-check-proof.sh  run-simplifier-and-extend-solution.sh  update-example-in-cadical-header-file.sh  update-version.sh
src/: CMakeLists.txt  Makefile  README.md  analyze.cpp  app.cpp  app.hpp  arena.cpp  arena.hpp  assume.cpp  assumptions.cpp  assumptions.hpp  autarky.cpp  averages.cpp  averages.hpp  avg.cpp  avg.hpp  backbone.cpp  backtrack.cpp  backward.cpp  bins.cpp  bins.hpp  block.cpp  block.hpp  cadical.cpp  cadical.hpp  ccadical.cpp  ccadical.h  cector.hpp  checker.cpp  checker.hpp  clause.cpp  clause.hpp  collect.cpp  compact.cpp  condition.cpp  config.cpp  config.hpp  configure  configure.sh  congruence.cpp  (+168 more)
test/: CMakeLists.txt  README  README.md  makefile  run-api-tests.sh  run-regression.sh
test/api/: .gitignore  README.md  apitrace.cpp  cfreeze.c  cipasir.c  ctest.c  example.cpp  example_constraint.cpp  example_declare_more_variable.cpp  example_declare_one_more_variable.cpp  example_tracer.cpp  incproof.cpp  learn.cpp  makefile  morenmore.cc  morenmore.cpp  newdelete.cpp  parcompwrite.cpp  propagate_assumptions.cpp  run.sh  sample.cpp  terminate.cpp  traverse.cpp  unit.cc  unit.cpp
test/cnf/: README.md  add128.cnf  dimocheck.c  drat-trim.c  elimclash.cnf  elimredundant.cnf  empty.sol  factor2708413neg.cnf  factor2708413pos.cnf  full2.cnf  full5.cnf  lrat-trim.c  makefile  precochk.c  prime1369.cnf  prime1681.cnf  prime841.cnf  run.sh  sat11.cnf  sat11.sol  sat3.cnf  sat7.sol  sat9.cnf  sqrt10201.sol  sqrt1042441.sol  sqrt10609.sol  sqrt11449.sol  sqrt11881.sol  sqrt16129.sol  sqrt259081.sol  sqrt2809.sol  sqrt3481.sol  sqrt3721.sol  sqrt5041.sol  sqrt5329.sol  sqrt6241.sol  sqrt7921.sol  sqrt9409.sol  unit2.cnf  unit6.cnf
test/cnfs/: .gitignore  add32.cnf  add4.cnf  add64.cnf  add8.cnf  block0.cnf  full6.cnf  full7.cnf  makefile  prime121.sol  prime1369.sol  prime1681.sol  prime169.sol  prime1849.cnf  prime1849.sol  prime2209.cnf  prime2209.sol  prime25.sol  prime289.cnf  prime289.sol  prime361.cnf  prime4.cnf  prime4.sol  prime49.cnf  prime49.sol  prime529.cnf  prime9.cnf  prime9.sol  prime961.cnf  prime961.sol  regr000.cnf  regr000.sol  sat1.cnf  sat10.sol  sat12.cnf  sat12.sol  sat13.cnf  sat13.sol  sat2.cnf  sat3.sol  (+34 more)
test/contrib/: README.md  craigtracer.cpp  craigtracer_incremental.cpp  makefile  run.sh
test/icnf/: empty.icnf  false.icnf  makefile  prime49.icnf  run.sh  two1.icnf  two2.icnf  unit1.icnf  unit2.icnf
test/mbt/: README.md  makefile  run.sh
test/trace/: README.md  makefile  reg0000.trace  reg0001.trace  reg0002.trace  reg0003.trace  reg0004.trace  reg0005.trace  reg0006.trace  reg0007.trace  reg0008.trace  reg0009.trace  reg0010.trace  reg0011.trace  reg0012.trace  reg0013.trace  reg0014.trace  reg0015.trace  reg0016.trace  reg0017.trace  reg0018.trace  reg0019.trace  reg0020.trace  reg0021.trace  reg0022.trace  reg0023.trace  reg0024.trace  reg0025.trace  reg0026.trace  reg0027.trace  reg0028.trace  reg0029.trace  reg0030.trace  reg0031.trace  reg0032.trace  reg0033.trace  reg0034.trace  reg0035.trace  reg0036.trace  reg0037.trace  (+40 more)
test/usage/: README.md  makefile  missing-clause.cnf  relaxed-header.cnf  run.sh  variable-too-large.cnf
