
add_executable(ctest api/ctest.c)
target_link_libraries(ctest cadical_lib)
add_test(NAME ctest COMMAND ctest)

add_executable(morenmore api/morenmore.cpp)
target_link_libraries(morenmore cadical_lib)
add_test(NAME morenmore COMMAND morenmore)

add_executable(newdelete api/newdelete.cpp)
target_link_libraries(newdelete cadical_lib)
add_test(NAME newdelete COMMAND newdelete)

add_executable(unit api/unit.cpp)
target_link_libraries(unit cadical_lib)
add_test(NAME unit COMMAND unit)

function (cnf_test FILE CODE)
	add_test(NAME ${FILE} COMMAND cadical ${CMAKE_CURRENT_SOURCE_DIR}/cnfs/${FILE}.cnf)
	SET_TESTS_PROPERTIES(${FILE} PROPERTIES PASS_REGULAR_EXPRESSION "c exit ${CODE}")
endfunction()

cnf_test(unit0 10)
cnf_test(unit1 10)
cnf_test(unit2 10)
cnf_test(unit3 10)
cnf_test(unit4 20)
cnf_test(unit5 20)
cnf_test(unit6 20)
cnf_test(unit7 20)

cnf_test(sub0 10)

cnf_test(sat0 20)
cnf_test(sat1 10)
cnf_test(sat2 10)
cnf_test(sat3 10)
cnf_test(sat4 10)
cnf_test(sat5 20)
cnf_test(sat6 10)
cnf_test(sat7 10)
cnf_test(sat8 10)
cnf_test(sat9 10)
cnf_test(sat10 10)
cnf_test(sat11 10)
cnf_test(sat12 10)
cnf_test(sat13 10)

cnf_test(full1 20)
cnf_test(full2 20)
cnf_test(full3 20)
cnf_test(full4 20)
cnf_test(full5 20)
cnf_test(full6 20)
cnf_test(full7 20)

cnf_test(regr000 10)
cnf_test(elimclash 20)
cnf_test(elimredundant 10)

cnf_test(block0 10)

cnf_test(prime4 10)
cnf_test(prime9 10)
cnf_test(prime25 10)
cnf_test(prime49 10)
cnf_test(prime121 10)
cnf_test(prime169 10)
cnf_test(prime361 10)
cnf_test(prime289 10)
cnf_test(prime529 10)
cnf_test(prime841 10)
cnf_test(prime961 10)
cnf_test(prime1369 10)
cnf_test(prime1681 10)
cnf_test(prime1849 10)
cnf_test(prime2209 10)

cnf_test(sqrt2809 10)
cnf_test(sqrt3481 10)
cnf_test(sqrt3721 10)
cnf_test(sqrt4489 10)
cnf_test(sqrt5041 10)
cnf_test(sqrt5329 10)
cnf_test(sqrt6241 10)
cnf_test(sqrt6889 10)
cnf_test(sqrt7921 10)
cnf_test(sqrt9409 10)
cnf_test(sqrt10201 10)
cnf_test(sqrt10609 10)
cnf_test(sqrt11449 10)
cnf_test(sqrt11881 10)
cnf_test(sqrt12769 10)
cnf_test(sqrt16129 10)
cnf_test(sqrt63001 10)
cnf_test(sqrt259081 10)
cnf_test(sqrt1042441 10)

cnf_test(ph2 20)
cnf_test(ph3 20)
cnf_test(ph4 20)
cnf_test(ph5 20)
cnf_test(ph6 20)

cnf_test(add4 20)
cnf_test(add8 20)
cnf_test(add16 20)
cnf_test(add32 20)
cnf_test(add64 20)
cnf_test(add128 20)

cnf_test(prime65537 20)
